--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   image_picker: ^1.2.0
   shared_preferences: ^2.5.3
   path_provider: ^2.1.5
+  flutter_bluetooth_serial: ^0.4.0
+  permission_handler: ^11.3.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
